Add error page for connection string.

--- a/AnimalAdoption.Web.Portal/appsettings.Development.json
+++ b/AnimalAdoption.Web.Portal/appsettings.Development.json
@@ -7,6 +7,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "SimulatedFailureChance": 0,
-  "GlobalPassword": "password"
+  "SimulatedFailureChance": 0
 }
