--- a/AnimalAdoption.Web.Portal/appsettings.Development.json
+++ b/AnimalAdoption.Web.Portal/appsettings.Development.json
@@ -1,11 +1,18 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "DetailedErrors": true,
+    "SqlConnectionString": "Server=tcp:sql-azure-sprint-devsecops-12.database.windows.net,1433;Initial Catalog=sqldb-azure-sprint-devsecops-12;Persist Security Info=False;User ID=sprintadmin;Password=7ATI4lXi#Z7c;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "SimulatedFailureChance": 0,
+    "AzureAd": {
+        "ClientId": "55501f24-791a-45ae-b798-a23eb201b185",
+        "TenantId": "dab167d2-fdab-4ab5-a387-22f955436d0a",
+        "clientSecret": "GZB7Q~mKzE4oL2qlNCVDUzmKcXc~3Ze2j6p3C",
+        "Instance": "https://login.microsoftonline.com/"
     }
-  },
-  "SimulatedFailureChance": 0
 }
